--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -12,6 +12,7 @@ title = "Will's Blog"
     mainSections = ["post"]
     favicon = ""
     [params.sidebar]
+        emoji = "🍥"
         avatar = "img/avatar.jpg"
         subtitle = "Do not go gentle into that goodnight."
     [params.article]
