--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -14,7 +14,8 @@ title = "Will's Blog"
     [params.sidebar]
         emoji = "🍥"
         avatar = "img/avatar.jpg"
-        subtitle = "Do not go gentle into that goodnight."
+        subtitle = "Do not go gentle into that good 
+night."
     [params.article]
         [params.article.license]
             enabled = true 
