--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -31,6 +31,7 @@ title = "Will's Blog"
         defaultImage = ""
         [params.opengraph.twitter]
             site = ""
+     disqusShortname = "coldzone"
             
 [menu]
     [[menu.main]]
